WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
162496
REGRESSION (
r206300
): LayoutTest media/media-source/media-source-duplicate-seeked.html timing out
https://bugs.webkit.org/show_bug.cgi?id=162496
Summary
REGRESSION (r206300): LayoutTest media/media-source/media-source-duplicate-se...
Ryan Haddad
Reported
2016-09-23 10:20:59 PDT
LayoutTest media/media-source/media-source-duplicate-seeked.html timing out Started with
https://trac.webkit.org/changeset/206300
https://build.webkit.org/results/Apple%20El%20Capitan%20Release%20WK2%20(Tests)/r206303%20(9674)/results.html
https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=media%2Fmedia-source%2Fmedia-source-duplicate-seeked.html
Attachments
Patch
(2.88 KB, patch)
2016-09-23 14:36 PDT
,
Jer Noble
darin
: review+
commit-queue
: commit-queue-
Details
Formatted Diff
Diff
Patch for landing
(2.13 KB, patch)
2016-10-10 10:47 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch for landing
(2.94 KB, patch)
2016-10-10 10:49 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Ryan Haddad
Comment 1
2016-09-23 10:52:12 PDT
Skipped test in
https://trac.webkit.org/r206313
while Jer investigates.
Jer Noble
Comment 2
2016-09-23 14:32:01 PDT
Happily, the regression (
r206300
) did not cause the breakage, it merely revealed breakage which was hidden by the mock media player infrastructure. Patch incoming.
Jer Noble
Comment 3
2016-09-23 14:36:10 PDT
Created
attachment 289709
[details]
Patch
WebKit Commit Bot
Comment 4
2016-09-24 20:51:26 PDT
Comment on
attachment 289709
[details]
Patch Rejecting
attachment 289709
[details]
from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-02', 'apply-attachment', '--no-update', '--non-interactive', 289709, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: k #1 succeeded at 1 with fuzz 3. patching file Source/WebCore/Modules/mediasource/MediaSource.cpp patching file LayoutTests/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file LayoutTests/platform/mac/TestExpectations Hunk #1 FAILED at 1452. 1 out of 1 hunk FAILED -- saving rejects to file LayoutTests/platform/mac/TestExpectations.rej Failed to run "[u'/Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply', '--force', '--reviewer', u'Darin Adler']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Full output:
http://webkit-queues.webkit.org/results/2140098
Alexey Proskuryakov
Comment 5
2016-09-25 17:52:43 PDT
Looks like this needs to be landed manually, or re-uploaded.
Jer Noble
Comment 6
2016-10-10 10:47:29 PDT
Created
attachment 291119
[details]
Patch for landing
Jer Noble
Comment 7
2016-10-10 10:49:33 PDT
Created
attachment 291120
[details]
Patch for landing
Alexey Proskuryakov
Comment 8
2016-10-26 23:32:59 PDT
Has this been landed?
WebKit Commit Bot
Comment 9
2016-10-31 09:39:33 PDT
Comment on
attachment 291120
[details]
Patch for landing Clearing flags on attachment: 291120 Committed
r208150
: <
http://trac.webkit.org/changeset/208150
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug