REGRESSION (r206300): LayoutTest media/media-source/media-source-duplicate-seeked.html timing out https://bugs.webkit.org/show_bug.cgi?id=162496

Reviewed by Darin Adler.

Source/WebCore:

The change to MockMediaSourcePrivate in r206300 revealed a true bug: seeks to the MediaSource's duration
will always fail. We should discard out of hand seeks which are greater than the duration, but allow seeks
directly to the duration.

* Modules/mediasource/MediaSource.cpp:
(WebCore::MediaSource::hasBufferedTime):

LayoutTests:

* platform/mac/TestExpectations:


Canonical link: https://commits.webkit.org/181932@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208150 268f45cc-cd09-0410-ab3c-d52691b4dbfc